...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/et_fullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:background="@drawable/abc_edit_text_material"
                        android:gravity="left|center_vertical"
                        android:hint="Full Name"
...
                        android:textColorHint="@color/hintColor"
                        app:met_floatingLabel="highlight"
                        app:met_primaryColor="@color/grey"
                        android:textSize="14sp" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:background="@drawable/abc_edit_text_material"
                        android:gravity="left|center_vertical"
                        android:hint="Email"
...
                        android:textColorHint="@color/hintColor"
                        app:met_floatingLabel="highlight"
                        app:met_primaryColor="@color/grey"
                        android:textSize="14sp" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/et_mobileNum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:background="@drawable/abc_edit_text_material"
                        android:gravity="left|center_vertical"
                        android:hint="Mobile"
...
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/makeModel"

                        android:orientation="horizontal">

                        <com.rengwuxian.materialedittext.MaterialTextView
                            android:id="@+id/budget"
                            style="@style/textSpinnerStyleHeading"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:gravity="left|center_vertical"
...
                            app:met_floatingLabel="highlight"
                            app:met_primaryColor="@color/grey"
                            android:inputType="text"
                            android:paddingLeft="8dp" />

                        <com.rengwuxian.materialedittext.MaterialTextView
                            android:id="@+id/budgetto"
                            style="@style/textSpinnerStyleHeading"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:gravity="left|center_vertical"
...
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.rengwuxian.materialedittext.MaterialEditText
                                android:id="@+id/followupDate"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginRight="10dp"
                                android:layout_weight="1"
                                android:background="@drawable/abc_edit_text_material"
                                android:gravity="left|center_vertical"
...
