...
                android:gravity="center"

                android:text="@string/hot"
                android:textSize="11sp" />

            <RadioButton
                android:id="@+id/statusWarm"
                style="@style/textStyleHeading2"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_margin="5dp"
...
                android:gravity="center"

                android:text="@string/warm"
                android:textSize="11sp" />

            <RadioButton
                android:id="@+id/statusCold"
                style="@style/textStyleHeading2"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_margin="5dp"
...
