...
                                            android:layout_weight="1"
                                            android:gravity="left"

                                            >-->

                    <com.gcloud.gaadi.ui.CustomMaterialAutoCompleteTxtVw
                        android:id="@+id/makeModel"
                        style="@style/autoCompleteTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:dropDownSelector="@drawable/autocomplete_dropdown"
                        android:gravity="left|center_vertical"
                        android:hint="Model* (Example i10, Swift, etc.)"
...
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <EditText
                            android:id="@+id/version"
                            style="@style/textSpinnerStyleHeading"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:editable="false"

...
                        android:gravity="left|center_vertical"
                        android:text="@string/cng_fitted" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/stockcolorlayout"
                    style="@style/textSpinnerStyleHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:descendantFocusability="blocksDescendants"
...
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center|left"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <EditText
                            android:id="@+id/stockColor"

                            style="@style/autoCompleteTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="#00000000"
                            android:clickable="false"
...
                         android:text="@string/hint_model_month_year" />-->

                    <!--<TextView
                      android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:layout_weight="3"
                      android:id="@+id/stockYear"
                      style="@style/textSpinnerStyleHeading" />-->

                    <!-- Gaurav Changes -->

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
...
                        android:layout_weight="1"

                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">


                        <EditText
                            android:id="@+id/stockMonth"
                            style="@style/textSpinnerStyleHeading"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:editable="false"
                            android:focusable="false"
...
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/kmsDriven"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"

                        android:layout_height="match_parent"
                        android:hint="@string/hint_kms_driven"
                        android:imeOptions="actionDone"
...
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/numOwners"
                        style="@style/textSpinnerStyleHeading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:focusable="false"
                        android:hint="@string/hint_num_owners" />
...
                        android:layout_height="wrap_content"


                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <com.gcloud.gaadi.ui.CustomAutoCompleteTextView
                            android:id="@+id/registrationCity"
                            style="@style/autoCompleteTextViewStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left|center_vertical"
                            android:hint="@string/hint_registration_city"
                            android:imeOptions="actionDone"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <EditText
                            android:id="@+id/registrationNumber"
                            style="@style/editTextStyle"
                            android:layout_width="match_parent"

                            android:layout_height="wrap_content"
                            android:gravity="left|center_vertical"
                            android:hint="@string/hint_registration_number"
...
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="Stock Price*"
                        android:textSize="12sp"
                        android:visibility="gone" />
                    <EditText
                        android:id="@+id/stockPrice"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/rupee_symbol_grey"
                        android:drawablePadding="4dp"
                        android:gravity="center_vertical"
...
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/addGaadi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:gravity="center"
            android:text="@string/add_gaadi"
            android:textColor="@color/white"
...
